View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024471 | Open CASCADE | OCCT:Samples | public | 2013-12-16 17:57 | 2013-12-19 14:00 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.7.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024471: Erasing of the shape in HLR sample leads to sample crash. | ||||
Description | On the selected shape erasing in HLR sample or on updating of the shape in the HLR dialog view the sample crashes. | ||||
Steps To Reproduce | 1. Start HLR sample. 2. Import some shape. 3. Open HLR dialog. 4. Click on "Get shapes" button. -- 2d view with HLR result and view in the dialog display the shape. 5. Click on "Get shapes" button again. -- The application crashes with exception. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
Date Modified | Username | Field | Change |
---|---|---|---|
2013-12-16 17:57 |
|
New Issue | |
2013-12-16 17:57 |
|
Assigned To | => aba |
2013-12-16 17:57 |
|
Status | new => assigned |
2013-12-16 18:10 |
|
Summary | Erasing of the object in HLR sample leads to sample crash => Erasing of the shape in HLR sample leads to sample crash. |
2013-12-16 18:10 |
|
Description Updated | |
2013-12-16 18:14 |
|
Note Added: 0027226 | |
2013-12-16 18:14 |
|
Assigned To | aba => san |
2013-12-16 18:14 |
|
Status | assigned => resolved |
2013-12-17 11:04 |
|
Note Added: 0027227 | |
2013-12-17 11:04 |
|
Assigned To | san => bugmaster |
2013-12-17 11:04 |
|
Status | resolved => reviewed |
2013-12-17 11:09 | apn | Note Added: 0027228 | |
2013-12-17 11:09 | apn | Test case number | => Not needed |
2013-12-17 11:09 | apn | Status | reviewed => tested |
2013-12-17 11:09 | apn | Target Version | => 6.7.0 |
2013-12-18 14:01 | apn | Changeset attached | => occt master 38fd0511 |
2013-12-18 14:01 | apn | Assigned To | bugmaster => apn |
2013-12-18 14:01 | apn | Status | tested => verified |
2013-12-18 14:01 | apn | Resolution | open => fixed |
2013-12-19 13:50 | bugmaster | Status | verified => closed |
2013-12-19 14:00 | bugmaster | Fixed in Version | => 6.7.0 |
2014-01-11 11:59 |
|
Category | OCCT Release:MFC => OCCT Release:Samples |
2014-01-11 12:02 |
|
Category | OCCT Release:Samples => OCCT:Samples |