0024471: Erasing of the shape in HLR sample leads to sample crash.